Fix dark mode for harmonies

--- a/src/css/games/harmonies.less
+++ b/src/css/games/harmonies.less
@@ -9,6 +9,10 @@ html[data-theme=dark].bgaext_bright {
 	.card .card-sides .card-side {
 		filter: var(--ext-bright);
 	}
+
+	#score #score-wrapper:before {
+		.reduceBrightness();
+	}
 }
 
 html[data-theme=dark].bgaext_dark {
@@ -41,8 +45,7 @@ html[data-theme=dark].bgaext_dark {
 		border-radius: 6px;
 	}
 
-	.show-player-tableau,
-	#generalactions {
+	.show-player-tableau {
 		filter: invert(0.9);
 	}
 
@@ -65,5 +68,16 @@ html[data-theme=dark].bgaext_dark {
 
 	.player-board[data-player-color=ffa500]:before {
 		background-color: #996300;
+	}
+
+	#score #score-wrapper .player-name {
+		background: var(--dark-back);
+		padding: 0.25em 0.5em;
+		border-radius: 8px;
+		text-shadow: none;
+	}
+
+	#score .cards-container {
+		color: #603b06;
 	}
 }
